--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -13,7 +13,7 @@ ifdef OS	# All configurations for Windwos OS
 # Correct the path based on OS
    FixPath = $(subst /,\,$1)
 # Name of the compiler used
-   CC = avr-gcc.exe
+   CC = avr-gcc
 # Name of the elf to hex file converter used
    AVR_OBJ_CPY = avr-objcopy.exe
 else #All configurations for Linux OS
@@ -32,7 +32,8 @@ endif
 
 all:$(BUILD_DIR)
 # Compile the code and generate the ELF file
-	$(CC) -g -Wall -Os -mmcu=atmega328  $(INC) $(SRC) -o $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).elf)
+	avr-gcc -g -Wall -Os -mmcu=atmega328  $(INC) $(SRC) -o main.bin main.c
+	avr-objcopy -j .text -j .data.O ihex main.bin main.hex
 
 $(BUILD_DIR):
 # Create directory to store the built files
